edited task5 to find all letters